archive/infrastructure/deployments/dashboard-deployment/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: dashboard
  labels:
    app: dashboard
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
  selector:
    app: dashboard
